# pathit

./: Cargo.toml  readme.md
src/: diff.rs  iter.rs  iter_dir.rs  iterator.rs  lib.rs  main.rs
src/cmd/: pathit-diff.rs  pathit-simple.rs  pathit.rs
