[package]
name = "pathit"
version = "0.1.0"
authors = ["fortunewang <fortunewang@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base16 = "0.2.1"
clap = "4.2.7"
lazy_static = "1.4.0"
ring = "0.16.20"
